# python-monorepo-uv

./: LICENSE  README.md  pyproject.toml
shared/utils/: pyproject.toml
shared/utils/src/utils/: __init__.py  log.py
src/backend/: README.md  pyproject.toml
src/backend/src/backend/: runner.py
src/core/: README.md  pyproject.toml
src/core/src/core/: __init__.py  models.py
src/frontend/: README.md  pyproject.toml
src/frontend/src/frontend/: runner.py
