[project]
name = "python-monorepo-uv"
version = "0.1.0"
description = "A project template for python monorepos using uv"
authors = [
  {name="Martin Kvisvik Larsen", email="martin.kvisvik.larsen@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
  "shared/utils",
  "src/core",
  "src/backend",
  "src/frontend",
]

[tool.uv.sources]
core = { workspace = true }
backend = { workspace = true }
frontend = { workspace = true }
utils = { workspace = true }

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
    "black>=24.10.0",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    # These are added as dev dependencies becuase they should be available
    # when developing the project.
    "utils",
    "core",
]
package = false
