[project]
name = "utils"
version = "0.1.0"
description = "Utility functionality"
authors = [
  {name="Martin Kvisvik Larsen", email="martin.kvisvik.larsen@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
