[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
  {name="Martin Kvisvik Larsen", email="martin.kvisvik.larsen@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "core",
    "fastapi>=0.115.6",
    "utils",
    "uvicorn>=0.34.0",
]

[project.scripts]
backend = "backend.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
utils = { workspace = true }
core = { workspace = true }
